--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react-dom": "^16.8.6",
     "react-reveal": "^1.2.2",
     "react-scripts": "2.1.8",
-    "react-scroll-effects": "^1.0.13"
+    "react-scroll-effects": "^1.0.13",
+    "uuid": "^3.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
