Added CSS loader and general styling changes

--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
   "dependencies": {
     "animate.css": "^3.7.0",
     "aos": "^2.3.4",
+    "bootstrap": "^4.3.1",
     "gh-pages": "^2.0.1",
     "react": "^16.8.6",
     "react-animate-on-scroll": "^2.1.5",
     "react-animated-css": "^1.0.5",
+    "react-bootstrap": "^1.0.0-beta.9",
     "react-dom": "^16.8.6",
     "react-reveal": "^1.2.2",
     "react-scripts": "2.1.8",
